May 13, 2010 edgbla <edgbla@yandex.ru>

 * libpcsxcore/plugins.h: PADreadPort1/2 for NRage pad plugin (windows).
 * libpcsxcore/plugins.c: Likewise.
 * po/ru_RU.po: Updated.

May 13, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * configure.ac: Added plugins/dfnet/Makefile.am.
 * Makefile.am: Added plugins/dfnet.
 * plugins/dfnet/dfnet.c: Added NetPlay plugin (based on netSock).
 * plugins/dfnet/unix.c: Likewise.
 * plugins/dfnet/cfg.c: Likewise.
 * plugins/dfnet/gui.c: Likewise.
 * plugins/dfnet/dfnet.h: Likewise.
 * plugins/dfnet/Makefile.am: Likewise.
 * plugins/dfnet/dfnet.glade2: Likewise.
 * plugins/dfinput/cfg-gtk2.c: Use gtk_dialog_run() for about dialog.
 * plugins/dfcdrom/cdrcfg-0.1df/main.c: Likewise.
 * po/pt_BR.po, po/it.po, po/zh_CN.po, po/zh_TW.po, po/ru_RU.po, po/pcsx.pot:
   Updated.
 * po/update-pot.sh: Added files in plugins/dfnet.

May 12, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/sio.c: Erase CdromId and CdromLabel when net connection closed.
 * libpcsxcore/psxcommon.h: Use boolean type for config values, byte for enum
   values.
 * gui/Config.c: Use TRUE/FALSE for boolean values, enums for byte values in
   config.
 * gui/ConfDlg.c: Likewise.
 * macosx/PcsxController.m: Likewise.
 * win32/gui/ConfigurePlugins.c: Likewise.
 * win32/gui/WndMain.c: Likewise.
 * libpcsxcore/psxmem.c: Likewise.
 * libpcsxcore/r3000a.c: Likewise.
 * libpcsxcore/plugins.c: Likewise.
 * libpcsxcore/misc.c: Likewise.
 * AUTHORS: Updated info.

May 11, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * gui/Gtk2Gui.c: Use TRUE/FALSE instead of 0/1 for NetOpened.
 * gui/Plugin.c: Likewise.
 * win32/gui/plugin.c: Likewise.
 * macosx/Plugin.c: Removed obsolete code.

May 10, 2010 edgbla <edgbla@yandex.ru>

 * data/pcsx.glade2: Memory cards dialog is now resizable, icons were
   enlarged and animated. (experimental,gtk)
 * gui/MemcardDlg.c: Likewise.

May 10, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/psxcommon.c: Include ppf.h.