@@ -1,3 +1,9 @@
+May 13, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
+
+ * plugins/dfnet/gui.c: Get the correct address under GNU/Linux.
+ * plugins/dfnet/dfnet.c: Removed sockGetIP(), which is unused in plugin.
+ * plugins/dfnet/dfnet.h: Likewise.
+
 May 13, 2010 edgbla <edgbla@yandex.ru>
 
  * libpcsxcore/plugins.h: PADreadPort1/2 for NRage pad plugin (windows).
